--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     href="reset.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-          <link rel="stylesheet" href="group.css">
+          <link rel="stylesheet" href="contact.css">
   	<title>FREE SPICY MAYO</title>
   </head>
   <body>
@@ -27,9 +27,26 @@
         }
     </script>
 
-    <div class="hero">
-      <h1> FREE SPICY MAYO</h1>
-    </div>
+  <div class="wrapper">
+   <div class="left-column">
+    
+   </div>
+
+	<div class="right-column">
+    <h1>C O N T A C T</h1>
+    <h3>Send an e-mail to beccagraphic@gmail.com:</h3>
+
+    <form action="mailto:beccagraphic@gmail.com" method="post" enctype="text/plain">
+      <h6>Name:</h6>
+      <input type="text" name="name">
+      <h6>E-mail:</h6>
+      <input type="text" name="mail">
+      <h6>Message:</h6>
+      <input type="text" name="message" size="350"><br><br>
+      <button type="submit">Send E-Mail</button>
+    </form>
+  </div>
+</div>
 
   <div class="footer">
     <a href="#" target="blank" class="fa fa-linkedin"></a>
