Wednesday Night Edits

--- a/contact.html
+++ b/contact.html
@@ -4,28 +4,25 @@
     <link rel="stylesheet" type="reset/css" 
     href="reset.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-          <link rel="stylesheet" href="contact.css">
-  	<title>FREE SPICY MAYO</title>
+        <link rel="stylesheet" href="contact.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href='https://fonts.googleapis.com/css?family=Shojumaru' rel='stylesheet'>
+    <style>
+      body {
+      font-family: 'Shojumaru';font-size: 22px;
+      }
+    </style>
+    <title>CONTACT US</title>
   </head>
   <body>
-    <div class="topnav" id="myTopnav">
-      <a href="about.html"><h5>OUR STORY</h5></a>
-      <a href="getinvolved.html"><h5>GET INVOLVED</h5></a>
-      <a href="contact.html"><h5>CONTACT</h5></a>
-      <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-    </div>
-
-    <script>
-      function myFunction() {
-      var x = document.getElementById("myTopnav");
-      if (x.className === "topnav") {
-        x.className += " responsive";
-        } else {
-        x.className = "topnav";
-          }
-        }
-    </script>
+    <nav>
+      <h2>THE COALITION AGAINST CHARGING FOR SPICY MAYO </h2>
+      <ul>
+        <li><a href="about.html"> OUR MISSION </a></li>
+        <li><a href="getinvolved.html"> GET INVOLVED </a></li>
+        <li><a href="contact.html"> CONTACT</a></li>
+      </ul>
+    </nav>
 
   <div class="wrapper">
    <div class="left-column">
@@ -33,10 +30,9 @@
    </div>
 
 	<div class="right-column">
-    <h1>C O N T A C T</h1>
-    <h3>Send an e-mail to beccagraphic@gmail.com:</h3>
+    <h3>EMAIL US</h3>
 
-    <form action="mailto:beccagraphic@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:#" method="post" enctype="text/plain">
       <h6>Name:</h6>
       <input type="text" name="name">
       <h6>E-mail:</h6>
