--- a/group.html
+++ b/group.html
@@ -4,31 +4,32 @@
     <link rel="stylesheet" type="reset/css" 
     href="reset.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-          <link rel="stylesheet" href="group.css">
+        <link rel="stylesheet" href="group.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href='https://fonts.googleapis.com/css?family=Shojumaru' rel='stylesheet'>
+    <style>
+      body {
+      font-family: 'Shojumaru';font-size: 22px;
+      }
+    </style>
   	<title>FREE SPICY MAYO</title>
   </head>
   <body>
-    <div class="topnav" id="myTopnav">
-      <a href="about.html"><h5>OUR STORY</h5></a>
-      <a href="getinvolved.html"><h5>GET INVOLVED</h5></a>
-      <a href="contact.html"><h5>CONTACT</h5></a>
-      <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-    </div>
+    <nav>
+      <h2>THE COALITION AGAINST CHARGING FOR SPICY MAYO </h2>
+      <ul>
+        <li><a href="about.html"> OUR MISSION </a></li>
+        <li><a href="getinvolved.html"> GET INVOLVED </a></li>
+        <li><a href="contact.html"> CONTACT</a></li>
+      </ul>
+    </nav>
 
-    <script>
-      function myFunction() {
-      var x = document.getElementById("myTopnav");
-      if (x.className === "topnav") {
-        x.className += " responsive";
-        } else {
-        x.className = "topnav";
-          }
-        }
-    </script>
 
     <div class="hero">
-      <h1> FREE SPICY MAYO</h1>
+      <div class="content">
+        <h1> FREE <br>SPICY<br>MAYO</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vulputate, massa a scelerisque gravida, ipsum massa fermentum magna, et cursus nulla tellus id nibh. </p>
+      </div>
     </div>
 
   <div class="footer">
