--- a/group.html
+++ b/group.html
@@ -6,12 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="group.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Shojumaru' rel='stylesheet'>
-    <style>
-      body {
-      font-family: 'Shojumaru';font-size: 22px;
-      }
-    </style>
+
   	<title>FREE SPICY MAYO</title>
   </head>
   <body>
