--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <title>About</title>
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Shojumaru' rel='stylesheet'>
     <style>
     body {
@@ -14,10 +15,10 @@
 
   <body>
     <nav>
-      <h2 class="main-title">THE COALITION AGAINST CHARGING FOR SPICY MAYO </h2>
+      <h2 class="main-title">COALITION AGAINST CHARGING FOR SPICY MAYO </h2>
       <ul>
+        <li><a href="group.html"> HOME</a></li>
         <li><a href="about.html"> OUR MISSION </a></li>
-        <li><a href="getinvolved.html"> GET INVOLVED </a></li>
         <li><a href="contact.html"> CONTACT</a></li>
       </ul>
     </nav>
