--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,10 @@
   </head>
   <body>
     <nav>
-      <h2>THE COALITION AGAINST CHARGING FOR SPICY MAYO </h2>
+      <h2>COALITION AGAINST CHARGING FOR SPICY MAYO </h2>
       <ul>
+        <li><a href="group.html"> HOME </a></li>
         <li><a href="about.html"> OUR MISSION </a></li>
-        <li><a href="getinvolved.html"> GET INVOLVED </a></li>
         <li><a href="contact.html"> CONTACT</a></li>
       </ul>
     </nav>
