--- a/group.html
+++ b/group.html
@@ -13,10 +13,10 @@
   </head>
   <body>
     <nav>
-      <h2>THE COALITION AGAINST CHARGING FOR SPICY MAYO </h2>
+      <h2>COALITION AGAINST CHARGING FOR SPICY MAYO </h2>
       <ul>
+        <li><a href="group.html"> HOME </a></li>
         <li><a href="about.html"> OUR MISSION </a></li>
-        <li><a href="getinvolved.html"> GET INVOLVED </a></li>
         <li><a href="contact.html"> CONTACT</a></li>
       </ul>
     </nav>
@@ -25,7 +25,7 @@
     <div class="hero">
       <div class="content">
         <h1> FREE <br>SPICY<br>MAYO</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vulputate, massa a scelerisque gravida, ipsum massa fermentum magna, et cursus nulla tellus id nibh. </p>
+        <p>Making Spicy Mayo accessible for all! </p>
       </div>
     </div>
 
